<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ScrollView
        android:id="@+id/add_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/add_title_et"
                style="@style/upload_input"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:drawableLeft="@drawable/lost_found_name"
                android:hint="@string/lost_found_title" />

            <EditText
                android:id="@+id/add_place_et"
                style="@style/upload_input"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:drawableLeft="@drawable/lost_found_where"
                android:hint="@string/lost_found_where" />

            <EditText
                android:id="@+id/add_contact_et"
                style="@style/upload_input"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:drawableLeft="@drawable/lost_found_which"
                android:hint="@string/lost_found_contact"
                android:inputType="number"
                android:maxLength="11" />

            <TextView
                style="@style/upload_input"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:drawableLeft="@drawable/lost_found_which"
                android:gravity="center_vertical"
                android:text="@string/info_completed" />

            <RadioGroup
                android:id="@+id/completed_selector"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/selector_completed_y"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/info_completed_y" />

                <RadioButton
                    android:id="@+id/selector_completed_n"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/info_completed_n" />
            </RadioGroup>

            <EditText
                android:id="@+id/add_ownerid_et"
                style="@style/upload_input"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:drawableLeft="@drawable/lost_found_which"
                android:hint="@string/lost_found_ownerid"
                android:maxLength="20"
                android:visibility="gone" />

            <EditText
                android:id="@+id/add_description_et"
                style="@style/upload_input"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:drawableLeft="@drawable/lost_found_desc"
                android:hint="@string/lost_found_description"
                android:inputType="textMultiLine"
                android:maxLength="150"
                android:scrollbars="vertical" />
        </LinearLayout>

    </ScrollView>

</FrameLayout>