<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/add_title_et"
                style="@style/upload_input"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:drawableLeft="@drawable/lost_found_name"
                android:hint="@string/add_album_title" />

            <EditText
                android:id="@+id/add_description_et"
                style="@style/upload_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="45dp"
                android:drawableLeft="@drawable/lost_found_desc"
                android:hint="@string/lost_found_description"
                android:inputType="textMultiLine"
                android:scrollbars="vertical" />


            <Button
                android:id="@+id/update"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:text="更新标题和描述"/>

            <TextView
                style="@style/upload_input"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:text="@string/album_raw_photos" />

            <edu.tju.ina.things.widget.NoScrollListView
                android:id="@+id/raw_listView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cacheColorHint="#00000000"
                android:fastScrollEnabled="false"
                android:footerDividersEnabled="false"
                android:headerDividersEnabled="false"
                android:smoothScrollbar="true" />

            <TextView
                style="@style/upload_input"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:text="@string/album_new_photos" />

            <edu.tju.ina.things.widget.NoScrollGridView
                android:id="@+id/add_image_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:background="@color/white"
                android:horizontalSpacing="5dp"
                android:minHeight="50dp"
                android:numColumns="3"
                android:padding="5dp"
                android:stretchMode="columnWidth"
                android:verticalSpacing="5dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Button
                    android:id="@+id/select_image"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="45dp"
                    android:text="@string/select_image"/>
                <Button
                    android:id="@+id/upload_photos"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="45dp"
                    android:text="@string/album_upload_photos"/>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</FrameLayout>