<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ScrollView
        android:id="@+id/add_scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/user_avatar"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp" />

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:textColor="@color/theme_orange"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/current_time"
                    android:layout_width="120dp"
                    android:layout_height="50dp" />
            </LinearLayout>

            <EditText
                android:id="@+id/add_title_et"
                style="@style/upload_input"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:drawableLeft="@drawable/lost_found_name"
                android:hint="@string/add_market_title" />

            <EditText
                android:id="@+id/add_price_et"
                style="@style/upload_input"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:drawableLeft="@drawable/lost_found_where"
                android:hint="@string/add_market_price"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/add_contact_et"
                style="@style/upload_input"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:drawableLeft="@drawable/lost_found_which"
                android:hint="@string/add_market_contact"
                android:inputType="number"
                android:maxLength="11" />

            <EditText
                android:id="@+id/add_description_et"
                style="@style/upload_input"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:drawableLeft="@drawable/lost_found_desc"
                android:hint="@string/add_market_description"
                android:inputType="textMultiLine"
                android:maxLength="150"
                android:scrollbars="vertical" />

            <edu.tju.ina.things.widget.NoScrollGridView
                android:id="@+id/add_image_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:background="@color/white"
                android:horizontalSpacing="5dp"
                android:minHeight="50dp"
                android:numColumns="3"
                android:padding="5dp"
                android:stretchMode="columnWidth"
                android:verticalSpacing="5dp" />
        </LinearLayout>

    </ScrollView>

</FrameLayout>