<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/info_poster"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            android:background="#dcdcdc"
            android:contentDescription="@string/app_name"
            android:scaleType="centerCrop" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/info_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/info_addtime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:drawableLeft="@drawable/info_time"
                    android:gravity="center_vertical"
                    android:textColor="@color/text_grey"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/activity_place"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:drawableLeft="@drawable/info_place"
                    android:gravity="center_vertical"
                    android:textColor="@color/text_grey"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/activity_sponsor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:drawableLeft="@drawable/info_sponsor"
                    android:gravity="center_vertical"
                    android:textColor="@color/text_grey"
                    android:textSize="18sp" />
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="30dp"
                android:layout_marginTop="40dp"
                android:src="@drawable/info_detail_go" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:background="@color/text_grey" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/info_detail_subtitle"
            android:gravity="right"
            android:paddingRight="5dp"
            android:text="@string/detail_detail_title"
            android:textColor="#fdfbf7"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/activity_detail_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="@color/text_grey"
            android:textSize="16sp" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/info_detail_subtitle"
            android:gravity="right"
            android:text="@string/detail_org_title"
            android:textColor="#fdfbf7"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/activity_org_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:textColor="@color/text_grey"
            android:textSize="16sp" />
    </LinearLayout>

</ScrollView>